Closed Bug 314637 Opened 19 years ago Closed 19 years ago

Search Messages can't find some words in ISO-2022-JP messages

Categories

(MailNews Core :: Search, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.8.1

People

(Reporter: emk, Assigned: emk)

Details

(Keywords: fixed1.8.0.4, intl, verified1.8.1)

Attachments

(1 file, 1 obsolete file)

Please see this bug using UTF-8 encoding. Reproducable: Always Steps to reproduce: 1. Compose new message. 2. Options-Character-Encoding-"Japanese (ISO-2022-JP)". 3. Type "現況". 4. Save it in the Drafts folder. 5. Edit-Find-"Search Messages". 6. Search using the following condition: Body contains "現況". Actual result: No matches found. Expected result. Match found.
Attached patch Patch rv1.0 (obsolete) — Splinter Review
Japanese word "現況" contains the bit pattern "=67" which is misidentified as quoted printable. Also changed Bugscape ID which is no longer useful.
Assignee: nobody → VYV03354
Status: NEW → ASSIGNED
Attachment #201537 - Flags: superreview?(bienvenu)
Attachment #201537 - Flags: review?
Attachment #201537 - Flags: review? → review?(mscott)
Attachment #201537 - Flags: superreview?(bienvenu)
Attachment #201537 - Flags: superreview+
Attachment #201537 - Flags: review?(mscott)
Attachment #201537 - Flags: review?(jshin1987)
Comment on attachment 201537 [details] [diff] [review] Patch rv1.0 r=jshin Please, use 'stateful charsets like ISO-2022-JP' in place of 'stateful csids like JIS'
Attachment #201537 - Flags: review?(jshin1987) → review+
Attached patch Patch rv1.1Splinter Review
Carrying over r+sr (comment only change)
Attachment #201537 - Attachment is obsolete: true
Attachment #201732 - Flags: superreview+
Attachment #201732 - Flags: review+
checked-in to trunk. Thanks, Kimura-san!
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
VERIFIED with Seamonkey 200511031-trunk/Win-2K.
Status: RESOLVED → VERIFIED
Flags: blocking1.8.1?
Comment on attachment 201732 [details] [diff] [review] Patch rv1.1 Quite simple one-liner fix which affects only ISO-2022-JP messages. But it's very important for Japanese users to search messages correctly.
Attachment #201732 - Flags: approval1.8.1?
Flags: blocking-thunderbird2?
Comment on attachment 201732 [details] [diff] [review] Patch rv1.1 please land this on the 1.8.1 branch for thunderbird 2 (or let me know if you need me to do it for you).
Attachment #201732 - Flags: approval1.8.1? → approval1.8.1+
Flags: blocking-thunderbird2? → blocking-thunderbird2+
landed on 1.8.1 branch
Keywords: fixed1.8.1
Target Milestone: mozilla1.9alpha → mozilla1.8.1
Comment on attachment 201732 [details] [diff] [review] Patch rv1.1 Oops, sorry, I forgot this. This should go to 1.8.0 branch. This is low risk and good fix.
Attachment #201732 - Flags: approval1.8.0.3?
Attachment #201732 - Flags: approval1.8.0.2?
Comment on attachment 201732 [details] [diff] [review] Patch rv1.1 Unfortunately we are already testing final candidate bits for 1.8.0.2 and this is not a stop-ship security hole. Looks good for 1.8.0.3 (which will be approved later, after we've tagged the cvs tree).
Attachment #201732 - Flags: approval1.8.0.2? → approval1.8.0.2-
Comment on attachment 201732 [details] [diff] [review] Patch rv1.1 Please check in promptly on the 1.8.0 branch. Thanks!
Attachment #201732 - Flags: approval1.8.0.3? → approval1.8.0.3+
checked-in to 1.8.0 branch, thanks.
Keywords: fixed1.8.0.3
Product: Core → MailNews Core
If anyone is still following this bug: The fix landed here was, well, a kludge on top of some mess. And it landed without a test. I removed all the mess and added tests here: https://hg.mozilla.org/comm-central/rev/9211c27bcce1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: