Bug 314637 Search Messages can't find some words in ISO-2022-JP messages patch by Masatoshi Kimura (emk) <VYV03354@nifty.ne.jp> r=jshin, sr=bienvenu